<resources>
    <string name="app_name">GitHub Java Trending</string>
    <string name="created" formatted="false">Created: %s</string>
    <string name="updated" formatted="false">Updated: %s</string>
    <string name="status" formatted="false">%1s opened / %1s closed</string>
    <string name="lorem_ipsun">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis ornare risus, sit amet ullamcorper elit. Praesent ultrices, ipsum a gravida tempus, metus ipsum porta diam, id eleifend nulla tellus feugiat libero. Donec commodo tortor massa, id maximus libero malesuada vitae. Vivamus diam est, efficitur et mattis sed, varius vitae libero. Fusce mollis risus ante, viverra tristique neque vulputate at. Proin non ipsum eu nisl sagittis consequat. Nullam nec sollicitudin metus. Ut id lacus mi. Phasellus hendrerit mi et diam varius, ac pulvinar est pretium.</string>
    <string name="pull_request_name">pull request name</string>
    <string name="username">username</string>
    <string name="repository_full_name">repo full name</string>
    <string name="repository_name">Repository Name</string>
    <string name="fork_count_string">12333</string>
    <string name="star_count_string">24123</string>
    <string name="opened_closed_status">%d opened / %d closed</string>
    <string name="unknown_repository">Unknown repository</string>
    <string name="something_went_wrong">Oops,\nsomething went wrong!</string>
    <string name="retry">Retry</string>
    <string name="you_are_offline">You are offline!</string>
    <string name="connect">Connect</string>
    <string name="try_again">Try again</string>
</resources>
