<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:padding="16dp">

    <TextView
        android:id="@+id/pullRequestTitle"
        style="@style/item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/pull_request_name" />

    <TextView
        android:id="@+id/pullRequestBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/pullRequestTitle"
        android:layout_below="@id/pullRequestTitle"
        android:text="@string/lorem_ipsun"
        android:maxLines="2"
        style="@style/item_body" />

    <ImageView
        android:id="@+id/pullRequestOwnerAvatar"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignStart="@id/pullRequestBody"
        android:layout_below="@id/pullRequestBody"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/pullRequestOwnerLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/pullRequestOwnerAvatar"
        android:layout_toEndOf="@id/pullRequestOwnerAvatar"
        android:text="@string/username"
        style="@style/username_style" />

    <TextView
        android:id="@+id/pullRequestOwnerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/pullRequestOwnerLogin"
        android:layout_below="@id/pullRequestOwnerLogin"
        android:text="@string/repository_full_name"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/pullRequestCreated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/pullRequestOwnerLogin"
        android:layout_below="@id/pullRequestBody"
        android:text="@string/created" />

    <TextView
        android:id="@+id/pullRequestUpdated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/pullRequestCreated"
        android:text="@string/updated" />


</RelativeLayout>
